structure function created on button "Виж структура"